sidebar layout for profile and dashboard are created

--- a/src/styles/components/gradient.css
+++ b/src/styles/components/gradient.css
@@ -29,7 +29,7 @@
 /* gradient version 3 */
 .bg_gradient_v3 {
     position: relative;
-    min-height: 100vh;
+    /* min-height: 100vh; */
     /* background: linear-gradient(135deg, #1e3c72, #2a5298); */
     background: linear-gradient(135deg, var(--color-primary), var(--color-secondary));
     display: flex;
